# GammaSpectrometer

./: CMakeLists.txt  README.md  autogen.py  energy.mac  gamma_spectrometer.cc  init_vis.mac  run1.mac  run2.mac  runMultiple.zsh  vis.mac
include/: ActionInitialization.hh  Analysis.hh  AuxFunctions.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GeneratorMessenger.hh  Params.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
runs/: plotEDep.py  plotEDepNorm.py  plotEDepPerCrystal.py  plotRun.py
runs/45deg70x70Prelim/: DepositedEnergy.npy  z.npy
runs/45degstackTest/: DepositedEnergy.npy
runs/45degstackTest0mm/: DepositedEnergy.npy  InitialEnergy.npy
runs/45degstackTest0mm5000/: DepositedEnergy.npy
runs/45degstackTest1mm/: DepositedEnergy.npy  y.npy
runs/chapter6-prelim/: DepositedEnergy.npy  InitialEnergy.npy  y.npy  z.npy
runs/newDetTest/: DepositedEnergy.npy
runs/newDetTest0mm5000/: DepositedEnergy.npy
runs/newDetTest9mm5000/: DepositedEnergy.npy
runs/staircaseTest/: DepositedEnergy.npy
runs/staircaseTest3mm/: DepositedEnergy.npy
runs/staircaseTest3mm-9ny/: DepositedEnergy.npy  y.npy
runs/staircaseTest5mm-10ny/: DepositedEnergy.npy
runs/staircaseTest5mm-9ny/: DepositedEnergy.npy
src/: ActionInitialization.cc  AuxFunctions.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GeneratorMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
